--- a/antobot_devices_india/control_server/CMakeLists.txt
+++ b/antobot_devices_india/control_server/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(antobot_devices_india)
+project(control_server)
 
 find_package(catkin REQUIRED COMPONENTS
   rospy
