--- a/antobot_devices_msgs/CMakeLists.txt
+++ b/antobot_devices_msgs/CMakeLists.txt
@@ -9,7 +9,10 @@ find_package(catkin REQUIRED COMPONENTS
   message_generation
 )
 
-# add_message_files()
+add_message_files(
+  FILES
+  gpsQual.msg
+)
 
 add_service_files(
   FILES
