Added client for calling lidarManager service

--- a/antobot_devices_lidar/CMakeLists.txt
+++ b/antobot_devices_lidar/CMakeLists.txt
@@ -12,6 +12,8 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
 )
 
+catkin_python_setup()
+
 catkin_package(
    CATKIN_DEPENDS roscpp sensor_msgs geometry_msgs tf geonav_transform tf2 tf2_ros std_msgs
 )
