Refactoring some parts (rospy -> rclpy) - untested

--- a/antobot_devices_imu/CMakeLists.txt
+++ b/antobot_devices_imu/CMakeLists.txt
@@ -11,7 +11,7 @@ find_package(catkin REQUIRED COMPONENTS
   tf2
   tf2_ros
   std_msgs
-  rospy
+  rclpy
 )
 =======
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
