--- a/antobot_devices_gps_noetic/CMakeLists.txt
+++ b/antobot_devices_gps_noetic/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.0.2)
 project(antobot_devices_gps)
 
 find_package(catkin REQUIRED COMPONENTS
-  rospy
+  rclpy
   std_msgs
 )
 
