--- a/antobot_devices_imu/package.xml
+++ b/antobot_devices_imu/package.xml
@@ -20,9 +20,9 @@
   <depend>geonav_transform</depend>
   <depend>antobot_manager_software</depend>
   <depend>std_msgs</depend>
-  <build_depend>rospy</build_depend>
-  <build_export_depend>rospy</build_export_depend>
-  <exec_depend>rospy</exec_depend>
+  <build_depend>rclpy</build_depend>
+  <build_export_depend>rclpy</build_export_depend>
+  <exec_depend>rclpy</exec_depend>
 
 =======
   <test_depend>ament_lint_auto</test_depend>
