Starting changes to lidarManager - needs more work. Also, acCamera is now a submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "AntobotCamera"]
 	path = AntobotCamera
 	url = https://github.com/Antobot/AntobotCamera.git
+[submodule "acCamera"]
+	path = acCamera
+	url = https://git.nicecart.ai/AntoCART/acCamera.git
