--- a/antobot_devices_gps/config/corrections_config_example.yaml
+++ b/antobot_devices_gps/config/corrections_config_example.yaml
@@ -1,25 +1,24 @@
 ### YAML file for the MQTT configuration
 
 ant_mqtt:
-  device_ID: '00'
-  base_ID: '00'
+  robot_ID: 'xxx'
+  baseStation_ID: 'xxx' #
 
-  mqtt_Broker: '117.184.79.186'  
-  mqtt_Port: 18383
+  mqtt_Broker: 'xxx'  
+  mqtt_Port: 0000
   mqtt_keepalive: 60 
-  mqtt_UserName: 'antobot'
-  mqtt_PassWord: '1qaz@WSX'
+  mqtt_UserName: 'xxx'
+  mqtt_PassWord: 'xxx'
 
-ppp:
-  # device_ID: '3ae678bd-b829-4dbb-acc4-2d041c3afda1' # purple
-  #device_ID: '58bab427-cbcd-4954-ab76-b49d68d8893d' # silver
-  device_ID : '46dcca18-f2e3-4eaf-b366-fad4997ca869' #ONLY FOR BLUE
+ntrip:
+  address: "ppntrip.services.u-blox.com"
+  port: 2101
+  username: "xxxxxxxxxxxx"
+  password: "xxxxxxxxxxxx"
+  mountpoint: "NEAR-SPARTN"
   
-
-
-
-
-
+ppp:
+  device_ID: 'xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx' # Example - not a valid code
 
 
 
