--- a/antobot_devices_lidar/config/aviaMsgConvert.yaml
+++ b/antobot_devices_lidar/config/aviaMsgConvert.yaml
@@ -1,7 +1,8 @@
-## subscribe
-lidar_topic: /livox/lidar_192_168_1_200
-## output frame
-lidar_frame: livox_frame_pointcloud2
+## subscribe livox topic name
+input_lidar_topic: /livox/lidar_192_168_1_200
+## output pt2 frame and name
+output_lidar_frame: laser_link_front
+output_lidar_topic: /livox/pointcloud2
 filter_num: 3
 lidar_max_range: 20.0
 lidar_min_range: 0.0
