fix some compile error, add ament_cmake in pkg.xml and install in CMakeLists.txt

--- a/antobot_devices_lidar/CMakeLists.txt
+++ b/antobot_devices_lidar/CMakeLists.txt
@@ -23,6 +23,11 @@ target_link_libraries(antobot_devices_lidar_convert
         yaml-cpp
 )
 
+install(TARGETS
+        antobot_devices_lidar_convert
+        DESTINATION lib/${PROJECT_NAME}
+)
+
 # === Python integration ===
 ament_python_install_package(${PROJECT_NAME})  # calls setup.py 
 
