--- a/antobot_devices_lidar/package.xml
+++ b/antobot_devices_lidar/package.xml
@@ -7,6 +7,9 @@
   <maintainer email="soyoung.kim@antobot.ai">So-Young Kim</maintainer>
   <license>TODO: License declaration</license>
 
+  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>ament_cmake_python</buildtool_depend>
+
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
