be sync with local

--- a/antobot_devices_lidar/config/aviaMsgConvert.yaml
+++ b/antobot_devices_lidar/config/aviaMsgConvert.yaml
@@ -3,8 +3,8 @@ lidar_num: 1
 input_lidar_topic1: /livox/lidar_192_168_1_200
 input_lidar_topic2: /livox/lidar_192_168_1_201
 ## output pt2 frame and name
-output_lidar_frame1: laser_link_front
-output_lidar_frame2: laser_link_back
+output_lidar_frame1: laser_link_front_static
+output_lidar_frame2: laser_link_front_static
 output_lidar_topic1: /livox/pointcloud2_192_168_1_200
 output_lidar_topic2: /livox/pointcloud2_192_168_1_201
 filter_num: 1
