--- a/antobot_devices_gps/package.xml
+++ b/antobot_devices_gps/package.xml
@@ -16,6 +16,7 @@
   <depend>sensor_msgs</depend>
   <depend>builtin_interfaces</depend>
   <exec_depend>ament_index_python</exec_depend>
+    <depend>antobot_devices_msgs</depend>
 
   <export>
     <build_type>ament_python</build_type>
