--- a/antobot_devices_lidar/config/Multi_MID360_config_aRCU.json
+++ b/antobot_devices_lidar/config/Multi_MID360_config_aRCU.json
@@ -25,9 +25,24 @@
   },
   "lidar_configs" : [
     {
+      "ip" : "192.168.1.200",
+      "pcl_data_type" : 1,
+      "pattern_mode" : 0,
+      "frame_id" : "lidar_200_frame",
+      "extrinsic_parameter" : {
+        "roll": 0.0,
+        "pitch": 0.0,
+        "yaw": 0.0,
+        "x": 0,
+        "y": 0,
+        "z": 0
+      }
+    },
+    {
       "ip" : "192.168.1.201",
       "pcl_data_type" : 1,
       "pattern_mode" : 0,
+      "frame_id" : "lidar_201_frame",
       "extrinsic_parameter" : {
         "roll": 0.0,
         "pitch": 0.0,
